# fanzyzones-kde

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  install.sh
.github/workflows/: release.yml
kwin-script/: metadata.json
kwin-script/contents/config/: main.xml
kwin-script/contents/ui/: fanzyzones.qml  main.qml
plasma-applet/: metadata.json
plasma-applet/contents/config/: config.qml  main.xml
plasma-applet/contents/ui/: ConfigGeneral.qml  ConfigShortcuts.qml  LayoutEditorWindow.qml  main.qml
resources/qml/: LayoutEditor.qml  LayoutMenu.qml  TrayHost.qml  TrayMenu.qml
src/: backend.rs  config.rs  kwin.rs  layout.rs  main.rs  qt_app.cpp  qt_app.h  qt_app.rs  resources.rs  shortcuts.rs  tray.rs
