[package]
name = "fanzyzones-kde"
version = "0.1.0"
edition = "2021"
authors = ["Ben Booth"]
description = "KDE Plasma tray app and KWin script for FancyZones-style window layouts"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
ksni = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "process", "rt", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.23"

[patch.crates-io]
ksni = { path = "vendor/ksni" }
