[package]
name = "fanzyzones-kde"
version = "0.1.5"
edition = "2021"
authors = ["Ben Booth"]
description = "KDE Plasma tray app and KWin script for FancyZones-style window layouts"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "process", "rt", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5.16.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.23"
